# XiuWenZhiZhuShou

./: CMakeLists.txt  XiuWen
HandleScanner/: CMakeLists.txt
HandleScanner/ZMotion/: gaosu.txt
HandleScanner/include/DetachThread/: CameraAndCardStateThread.h  TestImgGenerated.hpp
HandleScanner/include/Modules/: ConfigManagerModule.hpp  EliminateModule.hpp  ImgProModule.hpp  MotionControllerModule.hpp  TestModule.hpp  UIModule.hpp  WarningModule.hpp
HandleScanner/include/data/: Utilty.hpp
HandleScanner/include/ui/: DlgProductScore.h  HandleScanner.h
HandleScanner/osoFile/: HandleScanner.oso  ScoreConfig.oso  SetConfig.oso
HandleScanner/osoInclude/: HandleScanner.hpp  ScoreConfig.hpp  SetConfig.hpp
HandleScanner/sourceFile/: Company.txt  saveAddress.txt
HandleScanner/src/: main.cpp
HandleScanner/src/DetachThread/: DetachUtiltyThread.cpp  WarningInfoProcessThread.cpp
HandleScanner/src/Modules/: CameraModule.cpp  ConfigManagerModule.cpp  EliminateModule.cpp  ReconnectModule.cpp  RuntimeInfoModule.cpp  WarningModule.cpp
HandleScanner/src/data/: osoFIleUtiltyFunc.cpp
HandleScanner/src/func/: ImageProcessorModule.cpp
HandleScanner/src/ui/: DlgProductScore.cpp
XiuWenZhiZHuShouSolution/: CMakeLists.txt
XiuWenZhiZHuShouSolution/ZMotion/: init.txt
XiuWenZhiZHuShouSolution/include/DetachThread/: DetachDefectThread.h  DetachUtiltyThread.h  WarningInfoProcessThread.hpp
XiuWenZhiZHuShouSolution/include/Modules/: CameraModule.hpp  CommunicationModule.hpp  Modules.hpp  ReconnectModule.hpp  RuntimeInfoModule.hpp
XiuWenZhiZHuShouSolution/include/NoHardWare/: TestImgPushThread.hpp
XiuWenZhiZHuShouSolution/include/data/: GlobalStruct.hpp  Utilty.hpp  osoFIleUtiltyFunc.hpp
XiuWenZhiZHuShouSolution/include/func/: ImageProcessorModule.hpp
XiuWenZhiZHuShouSolution/include/ui/: DlgProductSet.h
XiuWenZhiZHuShouSolution/src/DetachThread/: CameraAndCardStateThread.cpp  DetachDefectThread.cpp  TestImgGenerated.cpp
XiuWenZhiZHuShouSolution/src/Modules/: CommunicationModule.cpp  ImgProModule.cpp  ImgSaveModule.cpp  Modules.cpp  MotionControllerModule.cpp  UIModule.cpp
XiuWenZhiZHuShouSolution/src/NoHardWare/: TestImgPushThread.cpp
XiuWenZhiZHuShouSolution/src/data/: GlobalStruct.cpp  Utilty.cpp
XiuWenZhiZHuShouSolution/src/func/: ImageProcessorModule.cpp
XiuWenZhiZHuShouSolution/src/ui/: DlgProductSet.cpp  HandleScanner.cpp
XiuWenZhiZHuShouSolution/ui/: DlgProductScore.ui  DlgProductSet.ui  HandleScanner.ui
